@@ -7,7 +7,7 @@ import java.util.*;
 import com.dexels.navajo.parser.FunctionInterface;
 import com.dexels.navajo.parser.TMLExpressionException;
 
-public class CheckUrl extends FunctionInterface {
+public final class CheckUrl extends FunctionInterface {
 
 	public String remarks() {
 		return "This function will check whether it returns a valid stream. It will throw an exception when the the URL is malformed, it returns false when the string is null";
@@ -18,13 +18,13 @@ public class CheckUrl extends FunctionInterface {
 		return "Used to check if an URL is responding.";
 	}
 
-	public Object evaluate() throws TMLExpressionException {
+	public final Object evaluate() throws TMLExpressionException {
 	      // input (ArrayList, Object).
         if (this.getOperands().size() != 1)
             throw new TMLExpressionException("CheckUrl(String) expected");
         Object a = this.getOperands().get(0);
         if (a==null) {
-			return new Boolean(false);
+			return Boolean.FALSE;
 		}
         if (!(a instanceof String))
             throw new TMLExpressionException("CheckUrl(String) expected");
@@ -37,7 +37,7 @@ public class CheckUrl extends FunctionInterface {
 			throw new TMLExpressionException("CheckUrl: bad url: "+a);
 		}
 
-        return new Boolean(check(u));
+        return Boolean.valueOf(check(u));
 	}
 	
     public boolean check(URL u) {
